# wasmut

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  README.md  coverage.sh  custom.css  workspace.code-workspace
.github/actions-rs/: grcov.yaml  grcov.yml
.github/workflows/: ci.yml  clippy.yml  coverage.yml  release.yml
benches/: runtime.rs
doc/: cli.md  configuration.md  module_requirements.md  operators.md  temp.md
src/: addressresolver.rs  cliarguments.rs  config.rs  defaults.rs  error.rs  executor.rs  lib.rs  main.rs  mutation.rs  operator.rs  output.rs  policy.rs  reporter.rs  wasmmodule.rs
src/operator/: mod.rs  new.rs  ops.rs
src/reporter/: cli.rs  html.rs  json.rs  mod.rs  rewriter.rs
src/runtime/: mod.rs  wasmer.rs  wasmtime.rs
src/templates/: base.hbs  index.hbs  mod.rs  source_view.hbs  style.css  wasmut.toml
testdata/: .gitignore
testdata/simple_add/: Makefile  test.c  test.wasm  test.wat
