[package]
name = "wasmut"
version = "0.1.0"
edition = "2021"
description = "wasmut: Mutation testing tool for WebAssembly"
license = "MIT"


[dependencies]
rayon = "1.5.1"

wasmer = { version = "2.1.1"}
wasmer-compiler-singlepass = {version = "2.1.1"}
wasmer-engine-universal = {version = "2.1.1"}
wasmer-wasi = {version = "2.1.1"}
wasmer-middlewares = {version = "2.1.1"}


parity-wasm = { git = "https://github.com/lwagner94/parity-wasm", branch="offsets" }
#parity-wasm = { path = "../parity-wasm" }
anyhow = "1.0.51"
thiserror = "1.0.30"
regex = "1.0.2"
clap = {version = "3.0.0", features=["cargo", "derive"]}
object = { version = "0.28.1", features = ["read", "wasm"]}
addr2line = "0.17.0"
gimli = "0.26.1"

toml = "0.5.0"
serde = { version = "1.0", features = ["derive"] }

colour = "0.6.0"
log = "0.4.0"
env_logger = "0.9.0"
num_cpus = "1.13.1"
indicatif = {version = "0.16.2", features = ["rayon"]}
rand = "0.8.4"