[package]
name = "wasmut"
version = "0.4.0"
edition = "2021"
description = "Mutation testing tool for WebAssembly/WASI modules"
authors = ["Lukas Wagner <lwagner94@posteo.at>"]
license = "MIT"

exclude = ["/testdata", "/wasmut-report"]
keywords = ["wasm", "mutation", "testing", "WebAssembly"]
categories = ["command-line-utilities", "development-tools::testing", "wasm"]
readme = "README.md"

documentation = "https://github.com/lwagner94/wasmut"
repository = "https://github.com/lwagner94/wasmut"
homepage = "https://github.com/lwagner94/wasmut"

[badges]
coveralls = { repository = "lwagner94/wasmut", branch = "main", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
rayon = "1.6.1"

wasmer = { version = "3.1"}
wasmer-compiler-singlepass = {version = "3.1"}
wasmer-wasi = {version = "3.1"}
wasmer-middlewares = {version = "3.1"}

# TODO: Maybe upstream my changes?
parity-wasm = { git = "https://github.com/lwagner94/parity-wasm", branch="instruction-offsets-rework", features=["std", "offsets"] }

anyhow = "1.0"
regex = "1.7"
clap = {version = "3.0", features=["cargo", "derive"]} # TODO
object = { version = "0.30", features = ["read", "wasm"]}
addr2line = "0.19"
gimli = "0.27"
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
log = "0.4"
env_logger = "0.10"
num_cpus = "1.15"
indicatif = {version = "0.17", features = ["rayon"]}
rand = "0.8"
syntect = "5.0"
handlebars = "4.3"
md5 = "0.7"
concat-idents = "1.1"
chrono = "0.4"
atomic-counter = "1.0"
dyn-clone = "1.0"

[dev-dependencies]
tempfile = "3.3"
quickcheck = "1.0"
pretty_assertions = "1.3"
